--- a/package.json
+++ b/package.json
@@ -3,22 +3,29 @@
   "name": "react-typescript-starter-pack",
   "version": "0.1.0",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^12.20.10",
-    "@types/react": "^17.0.4",
-    "@types/react-dom": "^17.0.3",
+    "@avtopro/button": "^0.9.7-344ab8b.0",
+    "@avtopro/icons": "^0.23.1-344ab8b.0",
+    "@avtopro/modal": "^0.8.7-344ab8b.0",
+    "@avtopro/preloader": "^0.4.7-344ab8b.0",
+    "@avtopro/select": "^0.16.7-344ab8b.0",
+    "@avtopro/text-input": "^0.7.7-344ab8b.0",
+    "@avtopro/tooltip": "^0.6.7-344ab8b.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "classnames": "^2.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.8.0",
-    "react-scripts": "4.0.3",
-    "sass": "^1.58.0",
-    "typescript": "^4.2.4",
-    "typescript-eslint-parser": "^22.0.0",
-    "web-vitals": "^1.1.1"
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
+    "react-scripts": "5.0.1",
+    "sass": "^1.59.2",
+    "typescript": "^4.9.5",
+    "web-vitals": "^3.3.0"
   },
   "scripts": {
     "lint": "eslint ./src --fix",
@@ -48,9 +55,19 @@
     ]
   },
   "devDependencies": {
-    "@mate-academy/eslint-config-react-typescript": "^0.0.4",
-    "eslint": "^7.25.0",
-    "gh-pages": "^3.1.0",
-    "node-sass": "^5.0.0"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^5.0.0",
+    "node-sass": "^8.0.0"
   }
 }
