--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "scripts": {
     "lint": "eslint ./src --fix",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
