--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -161,6 +161,12 @@
                     ]
                 }
             }
+        ],
+        "no-underscore-dangle": [
+            "error",
+            {
+                "allowAfterThis": true
+            }
         ]
     }
 }
